# traffic_monitoring_vn

./: .gitignore  README.md
Vehicle_License_OCR/: LP_Detection.ipynb  LP_Full_Pipeline.ipynb  LP_Recognition_Base.ipynb
Vehicle_Tracking/: Data_Processing.ipynb  Export_to_NCNN.ipynb  Finetune Vehicle Yolov11.ipynb  Finetune_Vehicle_Yolov11.ipynb  YOLOv11n_ByteTRACK_Tracking.ipynb
edge_pi4/: README.md  agent_ncnn.py  agent_pt.py  requirements.txt
edge_pi4/core/: detection.py  pipeline.py  tracking.py
edge_pi4/cpp/: CMakeLists.txt
edge_pi4/cpp/src/: main.cpp  yolo11.cpp  yolo11.h
edge_pi4/network/: http_client.py  mqtt_manager.py
esp32/: platformio.ini
esp32/include/: globals.h  hardware_control.h  mqtt_config.h  network_manager.h  traffic_logic.h
esp32/src/: globals.cpp  hardware_control.cpp  main.cpp  network_manager.cpp  traffic_logic.cpp
results/: BÁO_CÁO_THỰC_NGHIỆM_TỔNG_HỢP.md  fps_latency_run.csv  model_comparison_results.json  model_comparison_results.md  telemetry.csv
results/Viet_bao_cao/: chuong_5_ket_qua_thuc_nghiem_va_danh_gia.md  phu_luc_huong_dan_van_hanh.md
scripts/: audit.py  check_env_pi.py  compare_models.py  plot_charts.py  run_automated_tests.sh
server/: dashboard.py  main.py  requirements.txt
server/api/: routers.py  schemas.py
server/core/: database.py  ocr_engine.py  violation_logic.py
server/data/: db.json  traffic.db
server/network/: mqtt_publisher.py
shared/configs/: model_comparison_results.md  settings.yaml  settings_toy.yaml
shared/utils/: logger.py  visualization.py
(+14 files in other folders)
